--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #149ddd;
+  color: #333;
   text-decoration: none;
 }
 
@@ -83,10 +83,10 @@ h6 {
 }
 
 #header .profile img {
-  margin: 15px auto;
+  margin: 50px auto 20px;
   display: block;
   width: 120px;
-  border: 8px solid #2c2f3f;
+  /*border: 8px solid #2c2f3f;*/
 }
 
 #header .profile h1 {
@@ -126,6 +126,10 @@ h6 {
   text-decoration: none;
 }
 
+#footer a {
+  color: #fff;
+}
+
 #main {
   margin-left: 300px;
 }
@@ -145,7 +149,7 @@ h6 {
 --------------------------------------------------------------*/
 /* Desktop Navigation */
 .nav-menu {
-  padding: 30px 0 0 0;
+  padding: 40px 0 0 0;
 }
 
 .nav-menu * {
@@ -189,7 +193,7 @@ h6 {
 .nav-menu .active i,
 .nav-menu .active:focus i,
 .nav-menu li:hover>a i {
-  color: #149ddd;
+  color: #fff;
 }
 
 /* Mobile Navigation */
@@ -228,7 +232,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/bg_img.png") top center;
+  background: url("../img/img_bg3.jpg")no-repeat top center;
   background-size: cover;
 }
 
@@ -268,7 +272,7 @@ h6 {
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #149ddd;
+  border-bottom: 6px solid rgba(255,255,255,0.4);
 }
 
 @media (min-width: 1024px) {
@@ -312,17 +316,17 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #173b6c;
+  color: #333;
 }
 
 .section-title h2::after {
   content: "";
   position: absolute;
   display: block;
-  width: 50px;
+  width: 20px;
   height: 3px;
-  background: #149ddd;
-  bottom: 0;
+  background: #ddd;
+  bottom: 10px;
   left: 0;
 }
 
@@ -336,7 +340,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #173b6c;
+  color: #333;
 }
 
 .about .content ul {
@@ -357,7 +361,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #149ddd;
+  color: #aaa;
   line-height: 0;
 }
 
@@ -442,7 +446,7 @@ section {
 }
 
 .skills .progress-bar-wrap {
-  background: #dce8f8;
+  background: #fff;
   height: 10px;
 }
 
@@ -450,7 +454,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #149ddd;
+  background-color: #a9a9a9;
 }
 
 /*--------------------------------------------------------------
@@ -1101,4 +1105,19 @@ section {
     width: auto;
     padding-right: 20px 15px;
   }
+}
+
+
+@media (min-width: 992px) {
+  .col-lg-6 {
+    width: 100%;
+  }
+}
+
+.skills {
+  background-color: #f6f3f2;
+}
+.skills h4 {
+  padding-bottom: 25px;
+  color: #333;
 }
