education 영역 css 수정

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #149ddd;
+  background: #d3d3d3;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -206,7 +206,7 @@ h6 {
   font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
-  background-color: #149ddd;
+  background-color: #d3d3d3;
   color: #fff;
   width: 40px;
   height: 40px;
@@ -471,7 +471,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #1f5297;
+  border-left: 2px solid #696969;
   position: relative;
 }
 
@@ -487,7 +487,7 @@ section {
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #e4edf9;
+  background: #f6f3f2;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -515,7 +515,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #1f5297;
+  border: 2px solid #696969;
 }
 
 /*--------------------------------------------------------------
@@ -1119,5 +1119,6 @@ section {
 }
 .skills h4 {
   padding-bottom: 25px;
+  padding-top: 10px;
   color: #333;
 }
