--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #d3d3d3;
+  background-color: rgba(150,150,150,0.7);
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -206,7 +206,7 @@ h6 {
   font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
-  background-color: #d3d3d3;
+  background-color: rgba(150,150,150,0.7);
   color: #fff;
   width: 40px;
   height: 40px;
