project 마크업 및 레이아웃 수정

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1127,17 +1127,29 @@ section {
 
 }
 .portfolio .portfolio-links {
-  padding-bottom: 100px;
+  /*padding-bottom: 100px;*/
 }
 .portfolio .portfolio-links h3 {
   font-size: 26px;
   font-weight: 700;
   margin-top: 20px;
   color: #050d18;
+  position: relative;
+  padding-left: 30px;
+}
+.portfolio .portfolio-links h3:before {
+  width: 20px;
+  height: 20px;
+  display: block;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #000;
 }
 .portfolio .portfolio-links h3 + p {
-  padding-bottoM: 40px;
-  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .portfolio .portfolio-links table:first-child {
   margin-top: 20px;
@@ -1174,5 +1186,7 @@ section {
 .portfolio .xscroll-box > img {
   width: auto;
   max-height: 80vh;
-
+}
+.portfolio .filter-Spring h4 {
+  margin-top: 50px;
 }
