--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/img_bg3.jpg")no-repeat top center;
+  background: url("../img/img_bg.jpg")no-repeat top center;
   background-size: cover;
 }
 
